<resources>
    <string name="app_name">HW_07_krylov_as</string>
    <string name="Button_c">C</string>
    <string name="Button_cc">⌫</string>
    <string name="Button_sqrt">√</string>
    <string name="Button_div">÷</string>
    <string name="Button_1">1</string>
    <string name="Button_2">2</string>
    <string name="Button_3">3</string>
    <string name="Button_4">4</string>
    <string name="Button_5">5</string>
    <string name="Button_6">6</string>
    <string name="Button_7">7</string>
    <string name="Button_8">8</string>
    <string name="Button_9">9</string>
    <string name="Button_0">0</string>
    <string name="Button_mul">×</string>
    <string name="Button_minus"><![CDATA[-]]></string>
    <string name="Button_plus"><![CDATA[+]]></string>
    <string name="Button_point"><![CDATA[.]]></string>
    <string name="Button_equals"><![CDATA[=]]></string>
    <string name="_return">Оk</string>
    <string name="_creatorName">Крылов Александр Сергеевич</string>
    <string name="_creator">Разработчик:</string>
    <string name="_appName">Калькулятор</string>
    <string name="_titleDialogFragment">Выполнить очистку?</string>
    <string name="_messageDialogFragment">Поле ввода и история будут очищены</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="cleaning_is_canceled">Очистка отменена</string>
    <string name="Cancel">Отмена</string>
    <string name="Cleared">Очищено</string>

    cleaning is canceled
    cleared





</resources>