<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/smiley_faces_icon"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/textCongratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0"
        android:textSize="@dimen/_CreatorTextSize"
        android:text="@string/_creator"/>

    <TextView
        android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0"
        android:textSize="@dimen/_CreatorTextSize"
        android:text="@string/_creatorName"
        android:layout_marginBottom="@dimen/_Margin_0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_Margin_1"
        android:text="@string/_return"/>

</LinearLayout>